gatekeeper-config/tests/fixtures/forbidden-clusterwide-objects/mwc-disallowed.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: disallowed-mwc
webhooks:
  - name: rogue.example.com
    clientConfig: {}
    sideEffects: None
    admissionReviewVersions: ["v1"]
